2005-07-19  Derek Price  <derek@ximbiot.com>

	* texi2html.pl: Don't add the file extension when it is empty.  Some
	cleanup.

2005-07-19  Derek Price  <derek@ximbiot.com>

	* images/*: Remove these files since they are distributed under a
	license incompatible with the GPL.
	* NEWS: Note images/* removal.  Repair some grammar.
	s/Automake 1.9.3/1.9.5/.

2005-07-12  Derek Price  <derek@ximbiot.com>

	* T2h_i18n.pm, check_texinfo.pl.in, manage_i18n.pl.in,
	missing-texi2html, texi2html.pl, doc/stamp-vti, doc/texi2html.1.in,
	doc/texi2html.html, doc/texi2html.texi, doc/version.texi,
	images/COPYING: Replace FSF copyright notices.

2005-07-08  Derek Price  <derek@ximbiot.com>

	* images/*.gif: Convert all these files to...
	* images/*.png: PNG format.
	* images/COPYING: Paste in full text of Creative Commons License.

2005-07-07  Derek Price  <derek@ximbiot.com>

	* COPYING, T2h_i18n.pm, check_texinfo.pl.in, manage_i18n.pl.in,
	texi2html.pl, missing-texi2html, doc/texi2html.texi: Update FSF address
	in Copyright notice and Copyright years.
	* INSTALL, install-sh, mdate-sh, missing, mkinstalldirs, doc/mdate-sh,
	doc/texinfo.tex: Update from Automake 1.9.5.
	* Makefile.in, aclocal.m4, doc/Makefile.in: Regenerated with
	Automake 1.9.5.

2005-05-03  Patrice Dumas  <dumas@centre-cired.fr>

	* texi2html.pl: use Cwd in package Texi2HTML::LaTeX2HTML;

2005-03-29  Patrice Dumas  <dumas@centre-cired.fr>

	* examples/chm.init: Protect attributes on generated HHC and HHK.
	patch from jrfonseca (Jose Fonseca). Issue #12.
	* texi2html.pl: @CONF_DIRS is global.

2005-03-21  Patrice Dumas  <dumas@centre-cired.fr>

	* texi2html.init,texi2html.pl: new option --conf-dir to specify
	directory for config and init files.

2005-03-09  Derek Price  <derek@ximbiot.com>

	* texi2html: Use the Cwd module for cross-platform portability.
	(Thanks to a report from Vincent LaBella <VLaBella@uamail.albany.edu>.)

2005-03-07  Derek Price  <derek@ximbiot.com>
